--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -8,3 +8,4 @@ android.enableD8.desugaring=true
 distributionUrl=https\://services.gradle.org/distributions/gradle-4.7-bin.zip
 # Android Studio Gradle wrapper 3.1.2 doesn't support configure on demand
 org.gradle.configureondemand=false
+android.builder.sdkDownload=true
